It does not matter how slowly you go as long as you do not stop.
-- Confucius

First they ignore you, then they laugh at you, then they fight you,
then you win. –- Mahatma Gandhi

Tue, Sep 29, 2009
---------------------------------------------------------------------
- Adjusted activity timestamp to reflect UTC offset (thanks, Andrew!)
- Allow creating opportunities with non-unique name.
- Added :auto_complete controller hook.

Sun, Sep 27, 2009
---------------------------------------------------------------------
- Added sidebar hooks on asset landing pages.
- crm_tags: added support for showing tags on asset landing pages.

Sat, Sep 26, 2009
---------------------------------------------------------------------
- Added hooks for inline CSS styles and JavaScript epilogue.
- crm_tags: added JavaScript and CSS stylesheets for tags.
- crm_tags: make sure tags stay unique when searching.

Thu, Sep 24, 2009
---------------------------------------------------------------------
- crm_tags: Made controller methods work with query string that contains tags.

Tue, Sep 22, 2009
---------------------------------------------------------------------
- crm_tags: Proof of concept of combining query string with hash-prefixed tags.

Mon, Sep 21, 2009
---------------------------------------------------------------------
- Added hooks to model view partials.

Mon, Sep 21, 2009
---------------------------------------------------------------------
- Added hooks to model view partials.

Sun, Sep 20, 2009
---------------------------------------------------------------------
- More work on [crm_tags] plugin.

Fri, Sep 18, 2009
---------------------------------------------------------------------
- Merged String#to_url (thanks, Rit!)

Thu, Sep 17, 2009
---------------------------------------------------------------------
- Fixed task completion bug for tasks with specific due date (thanks, Andrew!)
- Added more task model specs.

Mon, Sep 14, 2009