@@ -14,11 +14,6 @@
 #
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
-#
-# NOTE #1: to enable UUIDs set the uuid option to true (uuid: true).
-# NOTE #2: UUIDs are only supported for MySQL v5+. Please make sure:
-#  - MySQL v5.0 -- v5.1.6: database user must have SUPER privilege;
-#  - MySQL v5.1.6 or later: database user must have SUPER or TRIGGER privilege.
 #------------------------------------------------------------------------------
 development:
   adapter: mysql
@@ -28,7 +23,6 @@ development:
   username: root
   password:
   socket: /tmp/mysql.sock
-  uuid:
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -41,7 +35,6 @@ test:
   username: root
   password:
   socket: /tmp/mysql.sock
-  uuid:
 
 production:
   adapter: mysql
@@ -51,4 +44,3 @@ production:
   username: root
   password: 
   socket: /tmp/mysql.sock
-  uuid:
