@@ -26,7 +26,6 @@ class CreateCampaigns < ActiveRecord::Migration
 
     add_index :campaigns, [ :user_id, :name, :deleted_at ], :unique => true
     add_index :campaigns, :assigned_to
-    add_uuid_trigger :campaigns
   end
 
   def self.down
