@@ -4,7 +4,6 @@
 # Table name: tasks
 #
 #  id           :integer(4)      not null, primary key
-#  uuid         :string(36)
 #  user_id      :integer(4)
 #  assigned_to  :integer(4)
 #  completed_by :integer(4)
