@@ -4,7 +4,6 @@
 # Table name: campaigns
 #
 #  id                  :integer(4)      not null, primary key
-#  uuid                :string(36)
 #  user_id             :integer(4)
 #  assigned_to         :integer(4)
 #  name                :string(64)      default(""), not null
