@@ -4,6 +4,10 @@ It does not matter how slowly you go as long as you do not stop.
 First they ignore you, then they laugh at you, then they fight you,
 then you win. –- Mahatma Gandhi
 
+Sat, Oct 3, 2009
+---------------------------------------------------------------------
+- Removed [uses_mysql_uuid] plugin and deprecated support for UUIDs.
+
 Tue, Sep 29, 2009
 ---------------------------------------------------------------------
 - Adjusted activity timestamp to reflect UTC offset (thanks, Andrew!)
